DetailDisplay update resolveDetailEditRenderer to use wrapped input components instead of formsy-react-components directly

--- a/packages/components/src/theme/detail.scss
+++ b/packages/components/src/theme/detail.scss
@@ -144,10 +144,6 @@
   color: $brand-warning;
 }
 
-.detail__editing .hide-label {
-  display: none;
-}
-
 .detail__header--container {
   padding-left: 0 !important;
 }
